			   XPCE ChangeLog
			   ==============


* FIXED: Bug#209 PceEmacs CHR colouring on bad input.

VERSION 6.4.3, distributed with SWI-Prolog 5.4.3
================================================

* FIXED: Converting instances of class number to a string.  Petter Egesund.

* FIXED: Win32: Drawing arcs as pie-slice with size-angle close to 0, so
  start and end are at the same location.

* FIXED: forcing loading of swi_compatibility.pl to ensure registration of
  messages.

VERSION 6.4.0, distributed with SWI-Prolog 5.4.0
================================================

* Updated version number for consistency.


VERSION 6.2.26, distributed with SWI-Prolog 5.3.20
==================================================

* FIXED: Bug#176.  Caused by allowing redefinition of `window<-popup'.

* ADDED: `window->update_scroll_bar_values' as a hook to intercept update
  requests to the scrollbars.

* ADDED: `tabbed_window->append': optional `expose' argument to make the
  new tab the topmost one.

* ENHANCED: Allow redefinition of `window<-popup' for associating popups
  rather than using hardwired slot.

* FIXED: Busy cursor handling for MS-Windows (Cursor was not properly
  updated).  Holger Kanwischer.

* FIXED: Class connect gesture to reset <-device in ->terminate.
  Petter Egesund.

VERSION 6.2.25, distributed with SWI-Prolog 5.3.18/5.3.19
=========================================================

* FIXED: Buffer overrun-by-one in menu->selection.  Caused crashes on Windows
  version.  Christophe Costa Florencio.

VERSION 6.2.24, distributed with SWI-Prolog 5.3.17
==================================================

* FIXED: Drawing arrow heads on bezier curves.  Christophe Costa Florencio.

* FIXED: editor->transpose_characters to fail if the caret is at the
  end of the buffer instead of importing a random character.

* FIXED: Bug#154 Application modal frame handling.  Holger Kanwischer. 

VERSION 6.2.23, distributed with SWI-Prolog 5.3.16